--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -2,4 +2,11 @@
   display: flex;
   justify-content: center;
   width: 85%;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 770px) {
+  .container {
+    width: 100%;
+  }
 }
